# librime-protobuf

./: CMakeLists.txt  README.md  rime_proto.proto  rime_proto_console.cc
src/: proto_module.cc
